# QuickLog

./: .gitignore  LICENSE  README.md  pyproject.toml
quicklog/: __init__.py  logger.py
